--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Carter Sales Comparison DEV",
+  "name": "Crews Sales Insights DEV",
   "version": "1.0.0",
   "size": {
     "width": 4,
