Minor changes to style & manifest

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,9 +9,9 @@
     {
       "alias": "Dataset1",
       "dataSetId": "f0362a43-ebee-487e-87d6-3e7250069eea",
-      "fields": [
-      ],
-    "id": ""
+      "fields": [],
+      "id": ""
     }
-  ]
+  ],
+  "id": "cde450b3-4cda-4081-ae62-83da4e920e91"
 }
