--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,6 +11,11 @@
       "dataSetId": "f0362a43-ebee-487e-87d6-3e7250069eea",
       "fields": [],
       "id": ""
+    },
+    {  "alias": "accounts",
+       "dataSetId": "63b26cb7-1320-402d-b9d6-67340e9f157d",
+       "fields": [],
+       "id": ""
     }
   ],
   "id": "56ee94ec-a9b1-4d6c-a009-cf002295e9ee"
