Updated build script and generated build

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,11 +12,12 @@
       "fields": [],
       "id": ""
     },
-    {  "alias": "accounts",
-       "dataSetId": "63b26cb7-1320-402d-b9d6-67340e9f157d",
-       "fields": [],
-       "id": ""
+    {
+      "alias": "accounts",
+      "dataSetId": "63b26cb7-1320-402d-b9d6-67340e9f157d",
+      "fields": [],
+      "id": ""
     }
   ],
-  "id": "56ee94ec-a9b1-4d6c-a009-cf002295e9ee"
+  "id": "e94c060a-5c25-4144-b01e-511b764561de"
 }
