--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "eslint": "^3.9.1",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.6.1",
-    "gulp": "~3.8.8",
+    "gulp": "~3.9",
     "gulp-angular-extender": "~0.1.0",
     "gulp-clean": "~0.3.1",
     "gulp-concat": "~2.4.1",
     "gulp-connect": "~2.0.6",
     "gulp-inject": "~1.0.2",
-    "gulp-minify-css": "~0.3.10",
-    "gulp-ng-annotate": "~0.3.3",
+    "gulp-clean-css": "~3.0.4",
+    "gulp-ng-annotate": "^0.3.6",
     "gulp-ng-html2js": "~0.1.8",
     "gulp-replace": "~0.4.0",
     "gulp-rev": "~1.1.0",
